--- a/app/globals.css
+++ b/app/globals.css
@@ -218,3 +218,12 @@ body {
 .animate-scroll-up:hover {
   animation-play-state: paused;
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
